--- a/Xcaret_4/Venetian_300x600.html
+++ b/Xcaret_4/Venetian_300x600.html
@@ -2225,32 +2225,32 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(215px, 557px) rotate(0deg);
         transform: translate(0, 0) translate(215px, 557px) rotate(0deg);
 }
-/*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: AVENIRLTSTD-BOOK; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 40px;
-        -ms-transform: translate(0, 0) translate(18px, 411px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(18px, 411px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(18px, 411px) rotate(0deg);
-        transform: translate(0, 0) translate(18px, 411px) rotate(0deg);
+/*#/#*//*#i83.text.css:text/base/css*/
+#i83 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 289px; height: 39px;
+        -ms-transform: translate(0, 0) translate(8px, 408px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 408px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 408px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 408px) rotate(0deg);
 }
 /*#/#*//*#i79.text.css:text/base/css*/
-#i79 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: AVENIRLTSTD-BOOK; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i79 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
-#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 86px;
-        -ms-transform: translate(0, 0) translate(20px, 451px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 451px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 451px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 451px) rotate(0deg);
+#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 51px;
+        -ms-transform: translate(0, 0) translate(20px, 458px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 458px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 458px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 458px) rotate(0deg);
 }
 /*#/#*//*#i81.text.css:text/base/css*/
-#i81 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: AVENIRLTSTD-BOOK; font-size: 13px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i81 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i81.i82.positioning.css:positioning/base/css.2*/
-#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 59px;
-        -ms-transform: translate(0, 0) translate(20px, 514px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 514px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 514px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 514px) rotate(0deg);
+#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 43px;
+        -ms-transform: translate(0, 0) translate(20px, 518px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 518px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 518px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 518px) rotate(0deg);
 }
 /*#/#*//*#i45.image.css:image/base/css*/
 #i45 { opacity: 1; }
@@ -2265,11 +2265,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i67 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
-#i67 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i67 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i61.image.css:image/base/css*/
 #i61 { opacity: 1; }
@@ -2298,13 +2298,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(62px, 568px) rotate(0deg);
         transform: translate(0, 0) translate(62px, 568px) rotate(0deg);
 }
-/*#/#*//*#i77.font-local.css:font/font-local/css*/
-/*#i77.i78.font-local.css:font-local/css.1*/
+/*#/#*//*#i85.font-local.css:font/font-local/css*/
+/*#i85.i86.font-local.css:font-local/css.1*/
 @font-face {
 font-family: 'AVENIRLTSTD-BOOK';
 src: url('fonts/');
 src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/AVENIRLTSTD-BOOK.woff') format('woff'),
+url('fonts/') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
+/*#/#*//*#i87.font-local.css:font/font-local/css*/
+/*#i87.i88.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'AVENIRLTSTD-BOOKOBLIQUE';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/') format('woff'),
 url('fonts/') format('truetype'),
 url('fonts/') format('opentype'),
 url('fonts/') format('svg');
@@ -2336,8 +2348,8 @@ url('fonts/') format('svg');
 </div>
 <!--#/#--><!--#i50.image.html:image/html-->
 <img id="i50" src="https://i.imgur.com/bYVFeo0.png"/>
-<!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">XCARET PLUS + XAVAGE ULTIMATE   ¡LA AVENTURA TE CAMBIA!</div>
+<!--#/#--><!--#i83.text.html:text/html-->
+<div id="i83">XCARET PLUS + XAVAGE ULTIMATE  ¡LA AVENTURA TE CAMBIA!</div>
 <!--#/#--><!--#i79.text.html:text/html-->
 <div id="i79">Las aventuras más extremas están en las seis actividades terrestres, acuáticas y aéreas de Xavage.</div>
 <!--#/#--><!--#i81.text.html:text/html-->
@@ -2352,7 +2364,8 @@ url('fonts/') format('svg');
 <img id="i63" src="https://i.imgur.com/yc4Xb4Z.png"/>
 <!--#/#--><!--#i65.image.html:image/html-->
 <img id="i65" src="https://i.imgur.com/QCxt7Rr.png"/>
-<!--#/#--><!--#i77.font.html:font/html-->
+<!--#/#--><!--#i85.font.html:font/html-->
+<!--#/#--><!--#i87.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2428,10 +2441,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
 bmShow('i50');
-/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
-bmShow('i7');
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
 bmShow('i79');
+/*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
+bmShow('i81');
 /*#/#*//*#i45.image.js:image/base/js*/
 
 /*#/#*//*#i45.i46.positioning.js:positioning/base/js.2*/
@@ -2502,8 +2515,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
-bmShow('i81');
+/*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
+bmShow('i83');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2552,9 +2565,9 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i7.text.meta:text/meta*/
-name: XCARET PLUS + XAVAGE ULTIMATE   ¡LA AVENTURA TE CAMBIA!; customName: false;
-/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i83.text.meta:text/meta*/
+name: XCARET PLUS + XAVAGE ULTIMATE  ¡LA AVENTURA TE CAMBIA!; customName: false;
+/*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i79.text.meta:text/meta*/
 name: Las aventuras más extremas están en las seis actividades terrestres, acuáticas y aéreas de Xavage.; customName: false;
@@ -2588,6 +2601,8 @@ name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i77.font.meta:font/meta*/
+/*#/#*//*#i85.font.meta:font/meta*/
 name: Web Font: AVENIRLTSTD-BOOK; type: font-local; customName: ;
+/*#/#*//*#i87.font.meta:font/meta*/
+name: Web Font: AVENIRLTSTD-BOOKOBLIQUE; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
