--- a/Xcaret_4/Cube 300x250/Cube.html
+++ b/Xcaret_4/Cube 300x250/Cube.html
@@ -640,10 +640,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: AVENIRLTSTD-BOOK; font-size: 13px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 268px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -1076,7 +1076,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https:https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1172,7 +1172,7 @@ var el = document.getElementById('i408');
 
 el.addEventListener('click', function(e){
     /*#i410.i411.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https:https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1251,7 +1251,7 @@ var el = document.getElementById('i412');
 
 el.addEventListener('click', function(e){
     /*#i414.i415.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https:https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
