--- a/Xcaret_4/main/Cube.html
+++ b/Xcaret_4/main/Cube.html
@@ -1000,7 +1000,7 @@ var el = document.getElementById('i183');
 
 el.addEventListener('click', function(e){
     /*#i195.i196.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'whatsapp://send?text=¡Mira lo que he encontrado! https:https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1061,7 +1061,7 @@ var el = document.getElementById('i229');
 
 el.addEventListener('click', function(e){
     /*#i230.i231.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'whatsapp://send?text=¡Mira lo que he encontrado! https:https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1091,7 +1091,7 @@ var el = document.getElementById('i237');
 
 el.addEventListener('click', function(e){
     /*#i238.i239.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https//www.xcaret.com/es/promociones/verano-xcaret/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
