--- a/Xcaret_4/main/Cube.html
+++ b/Xcaret_4/main/Cube.html
@@ -911,8 +911,7 @@ TE CAMBIA!</div>
 <!--#/#--><!--#i5.i227.image.html:image/html-->
 <img id="i227" src="https://i.imgur.com/bYVFeo0.png"/>
 <!--#/#--><!--#i5.i246.text.html:text/html-->
-<div id="i246">¡En Xcaret te espera 
-diversión en los ríos!</div>
+<div id="i246">Aprovecha del 10 al 25 de agosto.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i229.image.html:image/html-->
@@ -933,7 +932,7 @@ diversión en los ríos!</div>
 <img id="i262" src="https://i.imgur.com/bYVFeo0.png"/>
 <!--#/#--><!--#i6.i264.text.html:text/html-->
 <div id="i264">Las aventuras más 
-extremas están en Xcaret</div>
+extremas están en Xcaret.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i256.image.html:image/html-->
