--- a/Kipling2/slider_300x600_06.html
+++ b/Kipling2/slider_300x600_06.html
@@ -266,7 +266,7 @@
                 
                 <div class="te-images">
                     <img src="https://i.imgur.com/0LeqooL.jpg" alt="" />
-                    <img src="https://i.imgur.com/0LeqooL.jpg" alt="" />
+                    <img src="https://i.imgur.com/JFEYTow.jpg" alt="" />
                     <img src="https://i.imgur.com/yOxbLRJ.jpg" alt="" />
                 </div>
                 <div class="te-cover">
