--- a/PhilipsMorris formulario/formulario-def.html
+++ b/PhilipsMorris formulario/formulario-def.html
@@ -505,7 +505,7 @@
             <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
             <form id="question" class="FR form">
                 <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/USleZLd.jpg" style="height:180px; width: 310px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/U8Jk5aU.jpg" style="height:180px; width: 310px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -5px;"></span>
 
                     <!--<h2>CONTÁCTANOS</h2>-->
