--- a/PhilipsMorris formulario/formulario-def.html
+++ b/PhilipsMorris formulario/formulario-def.html
@@ -538,7 +538,7 @@
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 25px; margin-left: -10px;">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://www.mapfre.com.mx/seguros-mx/particulares/paginas/aviso-de-privacidad.jsp" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: #0d9dda;  ">He leído y acepto el
+                        <label style="min-width: 80%" for="condiciones"><a href="https://futurosinhumo.com/aviso-de-privacidad" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: #0d9dda;  ">He leído y acepto el
                                 AVISO DE PRIVACIDAD</a></label>
 
                         <!--<input type="checkbox" width="10" name="condiciones2" style="text-align: left; background-color: red" /></span>
