--- a/PhilipsMorris formulario/phill.html
+++ b/PhilipsMorris formulario/phill.html
@@ -521,7 +521,7 @@
                             <option value="" disabled selected>Género</option>
                             <option>Hombre</option>
                             <option>Mujer</option>
-                            <option>Prefiero no decir</option>
+                            <option selected>Prefiero no decir</option>
                         </select>
                     </p>
 
