--- a/PhilipsMorris formulario/phill.html
+++ b/PhilipsMorris formulario/phill.html
@@ -518,10 +518,10 @@
 
                      <p style="width: 100%; text-align: left; margin-bottom: -20px;">
                         <select id="sexo" name="man_woman" type="text">
-                            <option value="" disabled selected></option>
+                            <option value="" disabled selected>Género</option>
                             <option>Hombre</option>
                             <option>Mujer</option>
-                            <option selected>Género</option>
+                            <option selected>Prefiero no decir</option>
                         </select>
                     </p>
 
