--- a/ADIDAS 02/Cube_Ultraboost.html
+++ b/ADIDAS 02/Cube_Ultraboost.html
@@ -707,10 +707,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i380 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i380.i381.positioning.css:positioning/base/css.1*/
 #i380 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(-4px, 90px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-4px, 90px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-4px, 90px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-4px, 90px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-4px, 85px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-4px, 85px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-4px, 85px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-4px, 85px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -999,7 +999,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i336.i337.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Tw4wdj8XkUg4zhKS6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
