--- a/ADIDAS 02/Cube_pulse boost.html
+++ b/ADIDAS 02/Cube_pulse boost.html
@@ -636,6 +636,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i374.text.css:text/base/css*/
+#i374 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i374.i375.positioning.css:positioning/base/css.1*/
+#i374 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 197px; height: 35px;
+        -ms-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
+}
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
@@ -644,15 +653,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(-50%, -50%) translate(-56px, 88px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(-56px, 88px) rotate(0deg);
         transform: translate(-50%, -50%) translate(-56px, 88px) rotate(0deg);
-}
-/*#/#*//*#i4.i374.text.css:text/base/css*/
-#i374 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i374.i375.positioning.css:positioning/base/css.1*/
-#i374 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 197px; height: 35px;
-        -ms-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-26px, 102px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -703,23 +703,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i380.text.css:text/base/css*/
-#i380 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i380.i381.positioning.css:positioning/base/css.1*/
-#i380 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 111px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 111px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 111px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 111px) rotate(0deg);
-}
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(-5px, 92px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-5px, 92px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-5px, 92px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-5px, 92px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 222px; height: 33px;
+        -ms-transform: translate(-50%, -50%) translate(-14px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-14px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-14px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-14px, 90px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -857,11 +848,11 @@ url('fonts/') format('svg');
 <div id="i4" class="panel-content-holder">
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
-<!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">FEEL THE BOOST</div>
 <!--#/#--><!--#i4.i374.text.html:text/html-->
 <div id="i374">Tecnología única para cada
  uno de tus pasos.</div>
+<!--#/#--><!--#i4.i14.text.html:text/html-->
+<div id="i14">FEEL THE BOOST</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/wOht0FO.png"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
@@ -876,10 +867,8 @@ url('fonts/') format('svg');
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i380.text.html:text/html-->
-<div id="i380">Hacia cualquier dirección.</div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Cualquier superficie.</div>
+<div id="i24">En cualquier superficie, hacia cualquier dirección.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/i5NT8Yp.gif"/>
 <!--#/#--><!--#i5.i376.image.html:image/html-->
@@ -1065,13 +1054,13 @@ customName: 1;
 name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i374.text.meta:text/meta*/
 name: Texto copy; customName: 1;
 /*#/#*//*#i374.i375.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i14.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i130.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1097,10 +1086,6 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i380.text.meta:text/meta*/
-name: Texto copy; customName: 1;
-/*#/#*//*#i380.i381.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i24.text.meta:text/meta*/
 name: Texto; customName: 1;
