--- a/Heinz/fade_300x600.html
+++ b/Heinz/fade_300x600.html
@@ -78,7 +78,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/R638Tjz.gif");
+            background: url("https://i.imgur.com/4Er72hQ.gif");
             background-size: cover;
 
             
