--- a/Heinz/fade_300x600.html
+++ b/Heinz/fade_300x600.html
@@ -349,7 +349,7 @@
 
 <body class="value">
 
-     <a href="http://www.burgerking.com.mx/food-quality/our-burgers" target="_blank">
+     <a href="https://www.facebook.com/HeinzMexico/" target="_blank">
   
      
   
